--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -3,3 +3,4 @@ MAINTAINER Kitsu, Inc.
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx.conf /etc/nginx/conf.d/kitsu.conf
+COPY ./*.include.conf /etc/nginx/
