--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -1,61 +1,44 @@
+# The $upstream nonsense is to force runtime (instead of boot-time) DNS resolution so that
+# Docker containers can be swapped without restarting nginx
 server {
-    listen 80;
+  listen 80 default_server;
+  server_name kitsu.localhost;
 
-    # Extreme Logging
-    error_log stderr debug;
-    rewrite_log on;
-    log_subrequest on;
+  include proxy.include.conf;
+  include logging.include.conf;
 
-    # Proxy settings
-    resolver 127.0.0.11;
-    proxy_redirect off;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Real_IP $remote_addr;
-    proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+  location /api/ {
+    set $upstream "http://api";
+    proxy_pass $upstream;
+  }
+  location / {
+    set $upstream "http://web";
+    proxy_pass $upstream;
+  }
+}
 
-    # File serving
-    sendfile on;
-    include /etc/nginx/mime.types;
+server {
+  listen 80;
+  server_name media.kitsu.localhost;
 
-    # This nonsense is to force runtime (instead of boot-time) resolution of DNS
-    # so that Docker containers can be swapped, while being functionally
-    # equivalent to the following block:
-    #
-    #     location /api/ {
-    #         proxy_pass http://server/;
-    #     }
-    #
-    # It rewrites the path, stripping the prefix of the location block, so that
-    # Rails doesn't have to be completely aware that it's nested under /api/.
-    location ~* /api/(?<path>.*$) {
-        set $upstream "http://server/api/";
-        proxy_pass $upstream$path$is_args$args;
-    }
-    location ~* /api/system/(?<path>.*$) {
-        set $upstream "http://server/";
-        proxy_pass $upstream$path$is_args$args;
-        client_max_body_size 10M;
-    }
-    location ~* /rails/(?<path>.*$) {
-        set $upstream "http://server/rails/";
-        proxy_pass $upstream$path$is_args$args;
-    }
-    location ~* /forest(?<path>.*$) {
-        set $upstream "http://server/api/forest/";
-        proxy_pass $upstream$path$is_args$args;
-    }
-    location ~* /(?<path>.*$) {
-        set $upstream "http://client/";
-        proxy_pass $upstream$path$is_args$args;
-    }
-    location ^~ /system/ {
-        root /srv/www/uploads/;
-        try_files $uri @media;
-    }
-    location @media {
-        rewrite ^/system(/.*)$ $1 break;
-        proxy_set_header Host 'media.kitsu.io';
-        proxy_pass https://media.kitsu.io;
-    }
+  include proxy.include.conf;
+  include logging.include.conf;
+
+  location / {
+    set $upstream "http://minio:9000";
+    proxy_pass $upstream;
+  }
+}
+
+server {
+  listen 80;
+  server_name mail.kitsu.localhost;
+
+  include proxy.include.conf;
+  include logging.include.conf;
+
+  location / {
+    set $upstream "http://mailcatcher:1080";
+    proxy_pass $upstream;
+  }
 }
