--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,14 @@ services:
     image: schickling/mailcatcher
   minio:
     image: minio/minio:latest
-    command: [server, "/data"]
+    command: [server, "--console-address", ":9001", "/data"]
     volumes:
-      - uploads:/data
+      - ./uploads:/data
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=minioadmin
       - MINIO_DEFAULT_BUCKETS=kitsu-ugc-dev
+      - MINIO_BROWSER_REDIRECT_URL=https://admin.media.kitsu.dev:7543/
 
 
   # Web server, routing /api and / to server, client respectively
