Fix directory for client in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,7 @@ services:
     command: [sidekiq]
 
   web:
-    build: ./client
+    build: ./web
     tmpfs:
       - /opt/kitsu/client/node_modules/.vite/cache
     develop:
